<resources>
    <string name="app_name">VisitCard</string>
    <string name="label_visit_cards">Cartão de visita</string>
    <string name="label_desc_new_card">Novo Cartão</string>
    <string name="label_nome">Nome</string>
    <string name="label_fone">Fone</string>
    <string name="label_email">Email</string>
    <string name="label_empresa">Empresa</string>
    <string name="label_cor">Cor</string>
    <string name="label_confirmar">Confirmar</string>
    <string name="label_show_success">Cartão cadastrado com sucesso</string>
    <string name="label_share">Compartilhamento</string>
    <string name="todo">TODO</string>

    <string-array name="itens">
        <item>red</item>
        <item>green</item>
        <item>yellow</item>
        <item>Orange</item>
        <item>Purple</item>
        <item>Blue</item>
    </string-array>
</resources>